--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.12",
     "uuid": "^11.1.0"
   },
